# time-series

./: .gitignore  README.md  project_metrics_cfg.json  pyproject.toml  quant_ts_scorer.py  requirements.txt
configs/: config.yaml  metrics.yaml  wind_power.yaml
docs/: AUTO_OPTIMIZATION.md
scripts/: auto_optimization_loop.py  auto_optimize.py  auto_optimize_v2.py  auto_optimizer.py  auto_push.py  compare_all_models.py  compare_enhanced.py  compare_models.py  compare_pytorch.py  cron_optimizer.py  run_models.py  run_optimization.py  run_optimization_loop.py  show_optimization_history.py  test_import.py  test_preprocess.py  train.py  train_all_models.py  train_cnn_gru.py  train_gb.py  train_pytorch_compare.py  train_pytorch_pure.py  train_sklearn.py  train_wind_power.py
src/: __init__.py
src/features/: __init__.py  engineer.py
src/models/: __init__.py  arima.py  cnn_gru.py  gru.py  lstm.py  prophet_model.py  transformer.py
src/optimization/: __init__.py  auto_optimizer.py  metrics_definer.py
src/utils/: __init__.py  data.py  logging_utils.py  metrics.py  preprocessing.py  visualization.py
tests/: test_models.py
