[project]
name = "time-series"
version = "0.1.0"
description = "Time series analysis and forecasting project"
authors = [{name = "xuanmath"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
